@@ -80,12 +80,12 @@ REPOSITORY
     <https://github.com/michal-josef-spacek/PYX-Sort>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2011-2015 Michal Špaček
+     © 2011-2015 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
