@@ -3,6 +3,7 @@
  - Fix use lib '.' in Makefile.PL.
  - Update Module::Install to 1.19 version.
  - Update author github username.
+ - Update author username.
 
 0.03 2015-10-21T15:02:50+02:00
  - Add tests for parse() and parse_handler() methods.
